# modules/apps/commerce/headless/headless-commerce/headless-commerce-admin-inventory-impl/rest-openapi.yaml
@@ -47,8 +47,13 @@ components:
                     example: US
                     type: string
                 description:
-                    type: string
-                    example: "right stairs, first room on the left"
+                    additionalProperties:
+                        type: string
+                    example:
+                        en_US: Color
+                        hr_HR: Color HR
+                        hu_HU: Color HU
+                    type: object
                 externalReferenceCode:
                     example: AB-34098-789-N
                     type: string
@@ -69,8 +74,13 @@ components:
                     example: 0
                     type: number
                 name:
-                    example: "Alessio Antonio Rendina"
-                    type: string
+                    additionalProperties:
+                        type: string
+                    example:
+                        en_US: Color
+                        hr_HR: Color HR
+                        hu_HU: Color HU
+                    type: object
                 regionISOCode:
                     example: CA
                     type: string
@@ -587,7 +597,7 @@ paths:
                 - WarehouseItem
     "/warehouses/by-externalReferenceCode/{externalReferenceCode}":
         delete:
-            operationId: deleteWarehousByExternalReferenceCode
+            operationId: deleteWarehouseByExternalReferenceCode
             parameters:
                 - in: path
                   name: externalReferenceCode
@@ -621,7 +631,7 @@ paths:
             tags:
                 - Warehouse
         get:
-            operationId: getWarehousByExternalReferenceCode
+            operationId: getWarehouseByExternalReferenceCode
             parameters:
                 - in: path
                   name: externalReferenceCode
@@ -685,7 +695,7 @@ paths:
             tags:
                 - Warehouse
         patch:
-            operationId: patchWarehousByExternalReferenceCode
+            operationId: patchWarehouseByExternalReferenceCode
             parameters:
                 - in: path
                   name: externalReferenceCode
@@ -755,7 +765,7 @@ paths:
                 - Warehouse
     "/warehouses/by-externalReferenceCode/{externalReferenceCode}/warehouseItems":
         get:
-            operationId: getWarehousByExternalReferenceCodeWarehouseItemsPage
+            operationId: getWarehouseByExternalReferenceCodeWarehouseItemsPage
             parameters:
                 - in: path
                   name: externalReferenceCode
@@ -833,7 +843,7 @@ paths:
             tags:
                 - WarehouseItem
         post:
-            operationId: postWarehousByExternalReferenceCodeWarehouseItem
+            operationId: postWarehouseByExternalReferenceCodeWarehouseItem
             parameters:
                 - in: path
                   name: externalReferenceCode
@@ -913,7 +923,7 @@ paths:
                 - WarehouseItem
     "/warehouses/{id}":
         delete:
-            operationId: deleteWarehousId
+            operationId: deleteWarehouse
             parameters:
                 - in: path
                   name: id
@@ -948,7 +958,7 @@ paths:
             tags:
                 - Warehouse
         get:
-            operationId: getWarehousId
+            operationId: getWarehouse
             parameters:
                 - in: path
                   name: id
@@ -1013,7 +1023,7 @@ paths:
             tags:
                 - Warehouse
         patch:
-            operationId: patchWarehousId
+            operationId: patchWarehouse
             parameters:
                 - in: path
                   name: id
@@ -1084,7 +1094,7 @@ paths:
                 - Warehouse
     "/warehouses/{id}/warehouseItems":
         get:
-            operationId: getWarehousIdWarehouseItemsPage
+            operationId: getWarehouseIdWarehouseItemsPage
             parameters:
                 - in: path
                   name: id
@@ -1163,7 +1173,7 @@ paths:
             tags:
                 - WarehouseItem
         post:
-            operationId: postWarehousIdWarehouseItem
+            operationId: postWarehouseIdWarehouseItem
             parameters:
                 - in: path
                   name: id
@@ -1418,7 +1428,7 @@ paths:
             tags:
                 - Warehouse
         post:
-            operationId: postWarehous
+            operationId: postWarehouse
             requestBody:
                 content:
                     application/json:
