# modules/apps/commerce/headless/headless-commerce/headless-commerce-admin-inventory-impl/src/main/java/com/liferay/headless/commerce/admin/inventory/internal/resource/v1_0/WarehouseResourceImpl.java
@@ -23,6 +23,7 @@ import com.liferay.headless.commerce.admin.inventory.dto.v1_0.WarehouseItem;
 import com.liferay.headless.commerce.admin.inventory.internal.dto.v1_0.WarehouseDTOConverter;
 import com.liferay.headless.commerce.admin.inventory.internal.odata.entity.v1_0.WarehouseEntityModel;
 import com.liferay.headless.commerce.admin.inventory.resource.v1_0.WarehouseResource;
+import com.liferay.headless.commerce.core.util.LanguageUtils;
 import com.liferay.headless.commerce.core.util.ServiceContextHelper;
 import com.liferay.petra.function.UnsafeConsumer;
 import com.liferay.petra.string.StringPool;
@@ -33,6 +34,7 @@ import com.liferay.portal.kernel.search.filter.Filter;
 import com.liferay.portal.kernel.security.permission.resource.ModelResourcePermission;
 import com.liferay.portal.kernel.util.GetterUtil;
 import com.liferay.portal.kernel.util.HashMapBuilder;
+import com.liferay.portal.kernel.util.LocalizationUtil;
 import com.liferay.portal.odata.entity.EntityModel;
 import com.liferay.portal.vulcan.dto.converter.DTOConverterRegistry;
 import com.liferay.portal.vulcan.dto.converter.DefaultDTOConverterContext;
@@ -62,7 +64,16 @@ public class WarehouseResourceImpl
 	extends BaseWarehouseResourceImpl implements EntityModelResource {
 
 	@Override
-	public Response deleteWarehousByExternalReferenceCode(
+	public Response deleteWarehouse(Long id) throws Exception {
+		_commerceInventoryWarehouseService.deleteCommerceInventoryWarehouse(id);
+
+		Response.ResponseBuilder responseBuilder = Response.ok();
+
+		return responseBuilder.build();
+	}
+
+	@Override
+	public Response deleteWarehouseByExternalReferenceCode(
 			String externalReferenceCode)
 		throws Exception {
 
@@ -85,15 +96,6 @@ public class WarehouseResourceImpl
 	}
 
 	@Override
-	public Response deleteWarehousId(Long id) throws Exception {
-		_commerceInventoryWarehouseService.deleteCommerceInventoryWarehouse(id);
-
-		Response.ResponseBuilder responseBuilder = Response.ok();
-
-		return responseBuilder.build();
-	}
-
-	@Override
 	public EntityModel getEntityModel(MultivaluedMap multivaluedMap)
 		throws Exception {
 
@@ -101,7 +103,15 @@ public class WarehouseResourceImpl
 	}
 
 	@Override
-	public Warehouse getWarehousByExternalReferenceCode(
+	public Warehouse getWarehouse(Long id) throws Exception {
+		return _warehouseDTOConverter.toDTO(
+			new DefaultDTOConverterContext(
+				GetterUtil.getLong(id),
+				contextAcceptLanguage.getPreferredLocale()));
+	}
+
+	@Override
+	public Warehouse getWarehouseByExternalReferenceCode(
 			String externalReferenceCode)
 		throws Exception {
 
@@ -150,15 +160,21 @@ public class WarehouseResourceImpl
 	}
 
 	@Override
-	public Warehouse getWarehousId(Long id) throws Exception {
-		return _warehouseDTOConverter.toDTO(
-			new DefaultDTOConverterContext(
-				GetterUtil.getLong(id),
-				contextAcceptLanguage.getPreferredLocale()));
+	public Response patchWarehouse(Long id, Warehouse warehouse)
+		throws Exception {
+
+		_updateWarehouse(
+			_commerceInventoryWarehouseService.getCommerceInventoryWarehouse(
+				id),
+			warehouse);
+
+		Response.ResponseBuilder responseBuilder = Response.noContent();
+
+		return responseBuilder.build();
 	}
 
 	@Override
-	public Response patchWarehousByExternalReferenceCode(
+	public Response patchWarehouseByExternalReferenceCode(
 			String externalReferenceCode, Warehouse warehouse)
 		throws Exception {
 
@@ -180,32 +196,41 @@ public class WarehouseResourceImpl
 	}
 
 	@Override
-	public Response patchWarehousId(Long id, Warehouse warehouse)
-		throws Exception {
-
-		_updateWarehouse(
-			_commerceInventoryWarehouseService.getCommerceInventoryWarehouse(
-				id),
-			warehouse);
-
-		Response.ResponseBuilder responseBuilder = Response.noContent();
-
-		return responseBuilder.build();
-	}
-
-	@Override
-	public Warehouse postWarehous(Warehouse warehouse) throws Exception {
+	public Warehouse postWarehouse(Warehouse warehouse) throws Exception {
 		CommerceInventoryWarehouse commerceInventoryWarehouse =
 			_commerceInventoryWarehouseService.fetchByExternalReferenceCode(
 				warehouse.getExternalReferenceCode(),
 				contextCompany.getCompanyId());
 
 		if (commerceInventoryWarehouse == null) {
+			Map<String, String> nameMap = warehouse.getName();
+
+			if ((commerceInventoryWarehouse != null) && (nameMap == null)) {
+				nameMap = LanguageUtils.getLanguageIdMap(
+					commerceInventoryWarehouse.getNameMap());
+			}
+
+			Map<String, String> descriptionMap = warehouse.getDescription();
+
+			if ((commerceInventoryWarehouse != null) &&
+				(descriptionMap == null)) {
+
+				descriptionMap = LanguageUtils.getLanguageIdMap(
+					commerceInventoryWarehouse.getDescriptionMap());
+			}
+
 			commerceInventoryWarehouse =
 				_commerceInventoryWarehouseService.
 					addCommerceInventoryWarehouse(
 						warehouse.getExternalReferenceCode(),
-						warehouse.getName(), warehouse.getDescription(),
+						LocalizationUtil.getXml(
+							nameMap,
+							contextAcceptLanguage.getPreferredLanguageId(),
+							"name"),
+						LocalizationUtil.getXml(
+							descriptionMap,
+							contextAcceptLanguage.getPreferredLanguageId(),
+							"description"),
 						GetterUtil.get(warehouse.getActive(), true),
 						warehouse.getStreet1(), warehouse.getStreet2(),
 						warehouse.getStreet3(), warehouse.getCity(),
@@ -236,23 +261,23 @@ public class WarehouseResourceImpl
 		return HashMapBuilder.<String, Map<String, String>>put(
 			"delete",
 			addAction(
-				"UPDATE",
+				"DELETE",
 				commerceInventoryWarehouse.getCommerceInventoryWarehouseId(),
-				"deleteWarehousId",
+				"deleteWarehouse",
 				_commerceInventoryWarehouseWarehouseModelResourcePermission)
 		).put(
 			"get",
 			addAction(
 				"VIEW",
 				commerceInventoryWarehouse.getCommerceInventoryWarehouseId(),
-				"getWarehousId",
+				"getWarehouse",
 				_commerceInventoryWarehouseWarehouseModelResourcePermission)
 		).put(
 			"update",
 			addAction(
 				"UPDATE",
 				commerceInventoryWarehouse.getCommerceInventoryWarehouseId(),
-				"patchWarehousId",
+				"patchWarehouse",
 				_commerceInventoryWarehouseWarehouseModelResourcePermission)
 		).build();
 	}
